--- a/DevcampPortfolio/Gemfile
+++ b/DevcampPortfolio/Gemfile
@@ -57,3 +57,4 @@ gem 'devise', '~> 4.2'
 
 gem 'bootstrap', '~> 4.0.0.alpha6'
 gem 'petergate', '~> 1.7', '>= 1.7.5'
+gem 'sqlite3', '~> 1.3', '>= 1.3.13'
