--- a/DevcampPortfolio/Gemfile
+++ b/DevcampPortfolio/Gemfile
@@ -58,3 +58,5 @@ gem 'devise', '~> 4.2'
 gem 'bootstrap', '~> 4.0.0.alpha6'
 gem 'petergate', '~> 1.7', '>= 1.7.5'
 gem 'sqlite3', '~> 1.3', '>= 1.3.13'
+gem 'font-awesome-rails', '~> 4.7', '>= 4.7.0.2'
+gem 'kaminari', '~> 1.0', '>= 1.0.1'
