--- a/DevcampPortfolio/Gemfile
+++ b/DevcampPortfolio/Gemfile
@@ -61,3 +61,4 @@ gem 'sqlite3', '~> 1.3', '>= 1.3.13'
 gem 'font-awesome-rails', '~> 4.7', '>= 4.7.0.2'
 gem 'kaminari', '~> 1.0', '>= 1.0.1'
 gem 'jquery-ui-rails', '~> 6.0', '>= 6.0.1'
+gem 'redis', '~> 3.3', '>= 3.3.3'
