--- a/DevcampPortfolio/Gemfile
+++ b/DevcampPortfolio/Gemfile
@@ -64,3 +64,6 @@ gem 'jquery-ui-rails', '~> 6.0', '>= 6.0.1'
 gem 'redis', '~> 3.3', '>= 3.3.3'
 gem 'cocoon', '~> 1.2', '>= 1.2.10'
 gem 'gritter', '~> 1.2'
+gem 'redis', '~> 3.3', '>= 3.3.3'
+gem 'redcarpet', '~> 3.4'
+gem 'coderay', '~> 1.1', '>= 1.1.1'
